zluda_bindgen/build/cublasLt_internal.h

    CUBLASWINAPI undefined4 cublasLtCCCMatmulAlgoGetHeuristic(undefined8 param_1,long param_2,long param_3,long param_4,long param_5,long param_6,undefined8 *param_7,undefined4 param_8,undefined8 param_9,undefined8 param_10);
    CUBLASWINAPI undefined8 cublasLtZZZMatmulAlgoGetIds(undefined8 param_1,undefined4 param_2,undefined4 param_3,int param_4,int param_5,uint param_6,uint param_7,int param_8,long param_9,int *param_10);
    CUBLASWINAPI undefined4 cublasLtZZZMatmulAlgoInit(undefined8 param_1,undefined4 param_2,undefined4 param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined8 param_9);
    CUBLASWINAPI undefined4 cublasLtZZZMatmulAlgoCapGetAttribute(undefined8 param_1,undefined4 param_2,undefined8 param_3,undefined8 param_4,undefined8 param_5);
    CUBLASWINAPI undefined4 cublasLtZZZMatmul(undefined8 param_1,undefined8 param_2,undefined8 param_3,undefined8 param_4,undefined8 param_5,undefined8 param_6,undefined8 param_7,undefined8 param_8,undefined8 param_9,undefined8 param_10,undefined8 param_11,undefined8 param_12,undefined8 param_13,undefined8 param_14,undefined8 param_15,undefined8 param_16);
    CUBLASWINAPI undefined4 cublasLtZZZMatmulAlgoCheck(undefined8 param_1,long param_2,long param_3,long param_4,long param_5,long param_6,undefined8 param_7,undefined8 param_8);
    CUBLASWINAPI undefined4 cublasLtZZZMatmulAlgoGetHeuristic(undefined8 param_1,long param_2,long param_3,long param_4,long param_5,long param_6,undefined8 *param_7,undefined4 param_8,undefined8 param_9,undefined8 param_10);
    CUBLASWINAPI undefined8 cublasLtACCMatmulAlgoGetIds(undefined8 param_1,undefined4 param_2,undefined4 param_3,int param_4,int param_5,uint param_6,uint param_7,int param_8,long param_9,int *param_10);
    CUBLASWINAPI undefined4 cublasLtACCMatmulAlgoInit(undefined8 param_1,undefined4 param_2,undefined4 param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined8 param_9);
    CUBLASWINAPI undefined4 cublasLtACCMatmulAlgoCapGetAttribute(undefined8 param_1,undefined4 param_2,undefined8 param_3,undefined8 param_4,undefined8 param_5);
    CUBLASWINAPI undefined4 cublasLtACCMatmul(undefined8 param_1,undefined8 param_2,undefined8 param_3,undefined8 param_4,undefined8 param_5,undefined8 param_6,undefined8 param_7,undefined8 param_8,undefined8 param_9,undefined8 param_10,undefined8 param_11,undefined8 param_12,undefined8 param_13,undefined8 param_14,undefined8 param_15,undefined8 param_16);
    CUBLASWINAPI undefined4 cublasLtACCMatmulAlgoCheck(undefined8 param_1,long param_2,long param_3,long param_4,long param_5,long param_6,undefined8 param_7,undefined8 param_8);
    CUBLASWINAPI undefined4 cublasLtACCMatmulAlgoGetHeuristic(undefined8 param_1,long param_2,long param_3,long param_4,long param_5,long param_6,undefined8 *param_7,undefined4 param_8,undefined8 param_9,undefined8 param_10);
    CUBLASWINAPI undefined8 cublasLtBIIMatmulAlgoGetIds(undefined8 param_1,undefined4 param_2,undefined4 param_3,int param_4,int param_5,uint param_6,uint param_7,int param_8,long param_9,int *param_10);
    CUBLASWINAPI undefined4 cublasLtBIIMatmulAlgoInit(undefined8 param_1,undefined4 param_2,undefined4 param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined8 param_9);
    CUBLASWINAPI undefined4 cublasLtBIIMatmulAlgoCapGetAttribute(undefined8 param_1,undefined4 param_2,undefined8 param_3,undefined8 param_4,undefined8 param_5);
    CUBLASWINAPI undefined4 cublasLtBIIMatmul(undefined8 param_1,undefined8 param_2,undefined8 param_3,undefined8 param_4,undefined8 param_5,undefined8 param_6,undefined8 param_7,undefined8 param_8,undefined8 param_9,undefined8 param_10,undefined8 param_11,undefined8 param_12,undefined8 param_13,undefined8 param_14,undefined8 param_15,undefined8 param_16);
    CUBLASWINAPI undefined4 cublasLtBIIMatmulAlgoCheck(undefined8 param_1,long param_2,long param_3,long param_4,long param_5,long param_6,undefined8 param_7,undefined8 param_8);
    CUBLASWINAPI undefined4 cublasLtBIIMatmulAlgoGetHeuristic(undefined8 param_1,long param_2,long param_3,long param_4,long param_5,long param_6,undefined8 *param_7,undefined4 param_8,undefined8 param_9,undefined8 param_10);
    CUBLASWINAPI undefined8 cublasLtBSBMatmulAlgoGetIds(undefined8 param_1,undefined4 param_2,undefined4 param_3,int param_4,int param_5,uint param_6,uint param_7,int param_8,long param_9,int *param_10);
    CUBLASWINAPI undefined4 cublasLtBSBMatmulAlgoInit(undefined8 param_1,undefined4 param_2,undefined4 param_3,undefined4 param_4,undefined4 param_5,undefined4 param_6,undefined4 param_7,undefined4 param_8,undefined8 param_9);
    CUBLASWINAPI undefined4 cublasLtBSBMatmulAlgoCapGetAttribute(undefined8 param_1,undefined4 param_2,undefined8 param_3,undefined8 param_4,undefined8 param_5);
    CUBLASWINAPI undefined4 cublasLtBSBMatmul(undefined8 param_1,undefined8 param_2,undefined8 param_3,undefined8 param_4,undefined8 param_5,undefined8 param_6,undefined8 param_7,undefined8 param_8,undefined8 param_9,undefined8 param_10,undefined8 param_11,undefined8 param_12,undefined8 param_13,undefined8 param_14,undefined8 param_15,undefined8 param_16);
    CUBLASWINAPI undefined4 cublasLtBSBMatmulAlgoCheck(undefined8 param_1,long param_2,long param_3,long param_4,long param_5,long param_6,undefined8 param_7,undefined8 param_8);