cuda_macros/src/cublaslt_internal.rs

extern "system" {
    fn cublasLtCCCMatmulAlgoGetHeuristic(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: *mut ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtZZZMatmulAlgoGetIds(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_int,
        param_5: ::core::ffi::c_int,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_int,
        param_9: ::core::ffi::c_long,
        param_10: *mut ::core::ffi::c_int,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    fn cublasLtZZZMatmulAlgoInit(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtZZZMatmulAlgoCapGetAttribute(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtZZZMatmul(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
        param_6: ::core::ffi::c_ulonglong,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_ulonglong,
        param_14: ::core::ffi::c_ulonglong,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtZZZMatmulAlgoCheck(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtZZZMatmulAlgoGetHeuristic(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: *mut ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtACCMatmulAlgoGetIds(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_int,
        param_5: ::core::ffi::c_int,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_int,
        param_9: ::core::ffi::c_long,
        param_10: *mut ::core::ffi::c_int,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    fn cublasLtACCMatmulAlgoInit(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtACCMatmulAlgoCapGetAttribute(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtACCMatmul(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
        param_6: ::core::ffi::c_ulonglong,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_ulonglong,
        param_14: ::core::ffi::c_ulonglong,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtACCMatmulAlgoCheck(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtACCMatmulAlgoGetHeuristic(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: *mut ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtBIIMatmulAlgoGetIds(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_int,
        param_5: ::core::ffi::c_int,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_int,
        param_9: ::core::ffi::c_long,
        param_10: *mut ::core::ffi::c_int,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    fn cublasLtBIIMatmulAlgoInit(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtBIIMatmulAlgoCapGetAttribute(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtBIIMatmul(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
        param_6: ::core::ffi::c_ulonglong,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_ulonglong,
        param_14: ::core::ffi::c_ulonglong,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtBIIMatmulAlgoCheck(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtBIIMatmulAlgoGetHeuristic(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: *mut ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtBSBMatmulAlgoGetIds(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_int,
        param_5: ::core::ffi::c_int,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_int,
        param_9: ::core::ffi::c_long,
        param_10: *mut ::core::ffi::c_int,
    ) -> ::core::ffi::c_ulonglong;
}
extern "system" {
    fn cublasLtBSBMatmulAlgoInit(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_uint,
        param_4: ::core::ffi::c_uint,
        param_5: ::core::ffi::c_uint,
        param_6: ::core::ffi::c_uint,
        param_7: ::core::ffi::c_uint,
        param_8: ::core::ffi::c_uint,
        param_9: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtBSBMatmulAlgoCapGetAttribute(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_uint,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtBSBMatmul(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_ulonglong,
        param_3: ::core::ffi::c_ulonglong,
        param_4: ::core::ffi::c_ulonglong,
        param_5: ::core::ffi::c_ulonglong,
        param_6: ::core::ffi::c_ulonglong,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
        param_9: ::core::ffi::c_ulonglong,
        param_10: ::core::ffi::c_ulonglong,
        param_11: ::core::ffi::c_ulonglong,
        param_12: ::core::ffi::c_ulonglong,
        param_13: ::core::ffi::c_ulonglong,
        param_14: ::core::ffi::c_ulonglong,
        param_15: ::core::ffi::c_ulonglong,
        param_16: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
extern "system" {
    fn cublasLtBSBMatmulAlgoCheck(
        param_1: ::core::ffi::c_ulonglong,
        param_2: ::core::ffi::c_long,
        param_3: ::core::ffi::c_long,
        param_4: ::core::ffi::c_long,
        param_5: ::core::ffi::c_long,
        param_6: ::core::ffi::c_long,
        param_7: ::core::ffi::c_ulonglong,
        param_8: ::core::ffi::c_ulonglong,
    ) -> ::core::ffi::c_uint;
}
